apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.mikepenz.aboutlibraries.plugin'

//https://gist.github.com/shakalaca/6422811
android {
    applicationVariants.all { variant ->
        variant.assembleProvider.get().doLast {
            delete fileTree('src/main/java/com/cylonid/nativealpha') {
                include '**/__WebViewActivity_*.java'
            }
            delete fileTree('src/main') {
                include '**/AndroidManifest.xml'
            }
            ant.move(file: 'src/main/AndroidManifest_original.xml', tofile: 'src/main/AndroidManifest.xml')

        }
    }

    compileSdk 35
    splits {
        abi {
            enable true
            reset()
            include "armeabi-v7a", "arm64-v8a"
            universalApk true
        }
    }
    flavorDimensions "default"
    productFlavors {
        standard {
            dimension "default"
            isDefault true
            resValue "string", "app_name", "Native Alpha"
        }
    }

    defaultConfig {
        applicationId "com.cylonid.nativealpha"
        minSdkVersion 26
        targetSdkVersion 35
        versionCode 1400
        versionName "1.4.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments clearPackageData: 'true'
    }
    buildFeatures {
        dataBinding true
        viewBinding true
        buildConfig true
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            applicationIdSuffix = ".debug"
            resValue "string", "app_name", "_DEBUG-Native Alpha"
        }
        applicationVariants.all {
                // this method is use to rename your release apk only
            variant ->
                variant.outputs.each {
                        // on below line we are setting a name to our apk
                    output ->
                        // on below line we are specifying our app name.
                        project.ext { appName = 'NativeAlpha' }
                        // on below line we are adding the formatted date to our apk file name.
                        def formattedDate = new Date().format('yyyy-MM-dd-HH-mm-ss')
                        // on below line we are creating a new name for our apk.
                        def newName = output.outputFile.name
                        // on below line we are replacing our previous name with our app name.
                        newName = newName.replace("app-", "$project.ext.appName-")
                        // on below line we are replacing -release with our formatted date.
                        newName = newName.replace("-release", "-release-" + "v" + variant.versionName)
                        // at last we are setting our apk name to it.
                        output.outputFileName = newName

                }
        }
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
        execution 'ANDROIDX_TEST_ORCHESTRATOR'
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    namespace 'com.cylonid.nativealpha'

}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'androidx.core:core-ktx:1.15.0'
    implementation 'androidx.activity:activity-ktx:1.9.3'
    implementation 'androidx.core:core-ktx:1.15.0'
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
    implementation 'org.jsoup:jsoup:1.14.1'
    // implementation 'org.adblockplus:adblock-android-webview:4.4.0'
    implementation 'com.github.ihimanshurawat:Hasher:1.2'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.5'
    implementation 'androidx.navigation:navigation-ui-ktx:2.8.5'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'io.github.medyo:android-about-page:2.0.0'
    implementation 'androidx.webkit:webkit:1.12.1'
    implementation 'com.jakewharton:process-phoenix:2.1.2'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.robolectric:robolectric:4.12.1'
    testImplementation 'org.json:json:20210307'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.6.1'
    androidTestImplementation 'androidx.test.espresso:espresso-web:3.6.1'
    androidTestImplementation 'androidx.test:rules:1.6.1'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'org.testng:testng:6.9.6'
    androidTestUtil 'androidx.test:orchestrator:1.5.1'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    implementation "com.mikepenz:aboutlibraries:10.0.0"
    implementation "com.mikepenz:aboutlibraries-core:10.0.0"
    implementation 'pub.devrel:easypermissions:3.0.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
    implementation "androidx.biometric:biometric:1.1.0"
    implementation 'com.ernestoyaquello.dragdropswiperecyclerview:drag-drop-swipe-recyclerview:1.2.0'
    implementation "androidx.fragment:fragment-ktx:1.8.5"
    implementation 'com.caverock:androidsvg-aar:1.4'

    kapt "com.android.databinding:compiler:3.1.4"


}
def renameManifest = tasks.register("renameManifest") {
    ant.move(file: 'src/main/AndroidManifest.xml', tofile: 'src/main/AndroidManifest_original.xml')
}
preBuild.dependsOn renameManifest

int NUM_OF_CONTAINERS = 8

def generateWebViewActivities = tasks.register("extendAndroidManifest", Copy) {
    dependsOn(renameManifest)
    from 'src/main/AndroidManifest_original.xml'
    into 'src/main'

    String placeholder = "<!--Placeholder-->"
    String replacement = ""
    for (int i = 0; i < NUM_OF_CONTAINERS; i++) {
        replacement += "        <activity\n" +
                "            android:name=\".__WebViewActivity_" + String.valueOf(i) + "\"\n" +
                "            android:label=\"@string/app_name\"\n" +
                "            android:parentActivityName=\".MainActivity\"\n" +
                "            android:icon=\"@mipmap/native_alpha\"\n" +
                "            android:roundIcon=\"@mipmap/native_alpha\"\n" +
                "            android:theme=\"@style/AppTheme.NoActionBar.Webapp\"\n" +
                "            android:configChanges=\"orientation|screenSize|smallestScreenSize|density|screenLayout|uiMode|keyboard|keyboardHidden|navigation\"\n" +
                "            android:launchMode=\"standard\"\n" +
                "            android:process=\":web_sandbox_" + String.valueOf(i) + "\"\n" +
                "            android:documentLaunchMode=\"intoExisting\"\n" +
                "         />\n"
    }


    filter {
        String line -> line.replaceAll(placeholder, replacement)
    }
    rename { String fileName ->
        fileName.replace("_original", "")
    }
}
preBuild.dependsOn generateWebViewActivities

(0..<NUM_OF_CONTAINERS).each { int i ->
    TaskProvider<Copy> trTask = tasks.register("createWebViewclass${i}", Copy) {
        from 'src/main/java/com/cylonid/nativealpha/WebViewActivity.java'
        into "src/main/java/com/cylonid/nativealpha/__WebViewActivity_${i}"
        dependsOn(generateWebViewActivities)
        mustRunAfter(i == 0 ? [] : tasks.getByName("createWebViewclass${i - 1}"))

        filter { String line ->
            line.replaceAll("WebViewActivity", "__WebViewActivity_${i}")
        }

        rename { String fileName ->
            fileName.replace("WebViewActivity.java", "__WebViewActivity_${i}.java")
        }
    }

    preBuild.dependsOn(trTask)
}
